# sikradio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  docker-compose.yml  lookup.tmp  main.cpp  receiver.cpp  sender.cpp  sender.hpp  transmitter.hpp
common/: data_msg.hpp
lib/: optional.hpp
reciever/: buffer.hpp  exceptions.hpp  menu.hpp
sender/: ctrl_msg.hpp  ctrl_socket.hpp  data_msg.hpp  data_socket.hpp  exceptions.hpp  lockable_cache.hpp  lockable_queue.hpp  transmitter.hpp  types.hpp
sk_transmitter/: ctrl_msg.hpp  ctrl_socket.hpp  data_msg.hpp  data_socket.hpp  exceptions.hpp  internal_msg.hpp  lockable_cache.hpp  lockable_queue.hpp  sk_socket.hpp  types.hpp
src/: receiver.cpp  sender.cpp
src/common/: address_helpers.hpp  ctrl_msg.hpp  ctrl_socket.hpp  data_msg.hpp  exceptions.hpp  types.hpp
src/receiver/: buffer.hpp  data_socket.hpp  exceptions.hpp  receiver.hpp  rexmit_manager.hpp  state_manager.hpp  station.hpp  station_set.hpp  structures.hpp  ui_manager.hpp
src/reciever/: buffer.hpp  data_socket.hpp  receiver.hpp  rexmit_manager.hpp  state_manager.hpp  station.hpp  station_set.hpp
src/sender/: data_socket.hpp  exceptions.hpp  lockable_cache.hpp  lockable_queue.hpp  transmitter.hpp
test/: common.cpp  receiver.cpp
test/common/: test_ctrl_msg.cpp  test_ctrl_socket.cpp  test_data_msg.cpp
test/receiver/: test_buffer.cpp  test_data_socket.cpp
